feat: create docs

--- a/guide/index.html
+++ b/guide/index.html
@@ -27,7 +27,7 @@
         );
       })();
     </script>
-    <title>数据结构和算法课</title>
+    <title>开篇 - 数据结构和算法课</title>
   </head>
   <body>
     <div id="root"></div>
